Added moon-io/mygls-sdk as dependency

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,12 @@
         "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
         "phpunit/phpunit": "~6.0 || ^7.5.15 || 8.5.22 || ^9.3.3 || ^9.5.10"
     },
+    "repositories":  {
+        "github.com/moon-io/mygls-sdk": {
+			"type": "vcs",
+			"url": "https://github.com/moon-io/mygls-sdk"
+		},
+    },
     "autoload": {
         "psr-4": {
             "Webapix\\GLS\\Laravel\\": "src/"
