--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php": "^7.2|^8.0|^8.1|^8.2",
         "ext-json": "*",
         "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
-        "webapix/mygls-sdk": "^1.0.0"
+        "webapix/mygls-sdk": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
