--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
     "require": {
         "php": "^7.2|^8.0|^8.1|^8.2",
         "ext-json": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "webapix/mygls-sdk": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "phpunit/phpunit": "~6.0 || ^7.5.15 || 8.5.22 || ^9.3.3 || ^9.5.10"
     },
     "repositories":  {
